codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__bedrock_mantle_models.snap
---
source: tui/src/chatwidget/tests/bedrock_catalog_tests.rs
expression: "render_bottom_popup(&chat, 100)"
---
  选 择 模 型 和 推 理 强 度

› 1. GPT-5.6 Sol（ 当 前 ）   Latest frontier agentic coding model.
  2. GPT-6-Astra          Our most capable model for complex, demanding work.
  3. GPT-5.6 Terra        Balanced agentic coding model for everyday work.
  4. GPT-5.6 Luna         Fast and affordable agentic coding model.
  5. GPT-5.5              Frontier model for complex coding, research, and real-world work.
  6. GPT-5.4              Strong model for everyday coding.

  按  enter 确 认 ， 或 按  esc 返 回
